--- a/App-bureau9000/app/src/main/res/navigation/navigation.xml
+++ b/App-bureau9000/app/src/main/res/navigation/navigation.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/loginFragment2">
+    app:startDestination="@id/kiesRisicoFragment">
     <fragment
-        android:id="@+id/loginFragment2"
+        android:id="@+id/loginFragment"
         android:name="be.adembacaj.bureau9000.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
-            android:id="@+id/action_loginFragment2_to_projectFragment"
+            android:id="@+id/action_loginFragment_to_projectFragment"
             app:destination="@id/projectFragment" />
     </fragment>
     <fragment
@@ -54,4 +54,9 @@
         android:name="be.adembacaj.bureau9000.RisicosFragment"
         android:label="fragment_risicos"
         tools:layout="@layout/fragment_risicos" />
+    <fragment
+        android:id="@+id/kiesRisicoFragment"
+        android:name="be.adembacaj.bureau9000.KiesRisicoFragment"
+        android:label="fragment_kies_risico"
+        tools:layout="@layout/fragment_kies_risico" />
 </navigation>
