--- a/App-bureau9000/app/src/main/res/layout/fragment_rapport.xml
+++ b/App-bureau9000/app/src/main/res/layout/fragment_rapport.xml
@@ -43,7 +43,7 @@
                 android:text="Genereer Rapport" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textViewRisicoBesc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
