--- a/App-bureau9000/app/src/main/res/layout/fragment_risicos.xml
+++ b/App-bureau9000/app/src/main/res/layout/fragment_risicos.xml
@@ -38,7 +38,7 @@
                 android:text="Kies een risico" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textViewRisicoBesc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
