--- a/App-bureau9000/app/src/main/res/layout/fragment_gebouw_detail_vraag.xml
+++ b/App-bureau9000/app/src/main/res/layout/fragment_gebouw_detail_vraag.xml
@@ -65,7 +65,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/textViewRisicoBesc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="220dp"
