--- a/App-bureau9000/app/src/main/res/layout/fragment_kies_risico.xml
+++ b/App-bureau9000/app/src/main/res/layout/fragment_kies_risico.xml
@@ -20,6 +20,7 @@
             tools:layout_editor_absoluteY="16dp">
 
             <ListView
+                android:id="@+id/listRisicos"
                 android:layout_width="328dp"
                 android:layout_height="362dp"
                 app:layout_constraintBottom_toBottomOf="parent"
