--- a/App-bureau9000/app/src/main/res/layout/fragment_detail_kast.xml
+++ b/App-bureau9000/app/src/main/res/layout/fragment_detail_kast.xml
@@ -70,10 +70,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.173"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextNaam" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/editTextNaam"
         android:layout_width="337dp"
         android:layout_height="43dp"
         android:layout_marginTop="44dp"
