--- a/App-bureau9000/app/src/main/res/layout/fragment_project_gegevens.xml
+++ b/App-bureau9000/app/src/main/res/layout/fragment_project_gegevens.xml
@@ -17,8 +17,8 @@
             android:id="@+id/header_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="INFO PROJECT"
             android:layout_marginTop="25dp"
+            android:text="INFO PROJECT, HIER ZAL JE OOK DE INFO KUNNEN WIJZIGEN"
             android:textAlignment="center"
             android:textSize="30sp"
             android:textStyle="bold" />
